@@ -39,7 +39,8 @@ typedef struct {
 WirelessSecurityWEPKey * ws_wep_key_new (const char *glade_file,
                                          NMConnection *connection,
                                          const char *connection_id,
-                                         WEPKeyType type);
+                                         WEPKeyType type,
+                                         gboolean adhoc_create);
 
 WEPKeyType ws_wep_guess_key_type (NMConnection *connection, const char *connection_id);
 
